feat: Add Noto Sans font

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,7 +4,8 @@
     font-style: normal;
     font-weight: 100;
     font-display: swap;
-    src: url("/fonts/Moderat-Thin.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Thin.woff2") format("woff2"),
       url("/fonts/Moderat-Thin.woff") format("woff");
   }
 
@@ -13,7 +14,8 @@
     font-style: italic;
     font-weight: 100;
     font-display: swap;
-    src: url("/fonts/Moderat-Thin-Italic.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Thin-Italic.woff2") format("woff2"),
       url("/fonts/Moderat-Thin-Italic.woff") format("woff");
   }
 
@@ -22,7 +24,8 @@
     font-style: normal;
     font-weight: 300;
     font-display: swap;
-    src: url("/fonts/Moderat-Light.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Light.woff2") format("woff2"),
       url("/fonts/Moderat-Light.woff") format("woff");
   }
 
@@ -31,7 +34,8 @@
     font-style: italic;
     font-weight: 300;
     font-display: swap;
-    src: url("/fonts/Moderat-Light-Italic.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Light-Italic.woff2") format("woff2"),
       url("/fonts/Moderat-Light-Italic.woff") format("woff");
   }
 
@@ -40,7 +44,8 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/Moderat-Regular.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Regular.woff2") format("woff2"),
       url("/fonts/Moderat-Regular.woff") format("woff");
   }
 
@@ -49,7 +54,8 @@
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/Moderat-Regular-Italic.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Regular-Italic.woff2") format("woff2"),
       url("/fonts/Moderat-Regular-Italic.woff") format("woff");
   }
 
@@ -58,7 +64,8 @@
     font-style: normal;
     font-weight: 500;
     font-display: swap;
-    src: url("/fonts/Moderat-Medium.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Medium.woff2") format("woff2"),
       url("/fonts/Moderat-Medium.woff") format("woff");
   }
 
@@ -67,7 +74,8 @@
     font-style: italic;
     font-weight: 500;
     font-display: swap;
-    src: url("/fonts/Moderat-Medium-Italic.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Medium-Italic.woff2") format("woff2"),
       url("/fonts/Moderat-Medium-Italic.woff") format("woff");
   }
 
@@ -76,7 +84,8 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url("/fonts/Moderat-Bold.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Bold.woff2") format("woff2"),
       url("/fonts/Moderat-Bold.woff") format("woff");
   }
 
@@ -85,7 +94,8 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url("/fonts/Moderat-Bold-Italic.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Bold-Italic.woff2") format("woff2"),
       url("/fonts/Moderat-Bold-Italic.woff") format("woff");
   }
 
@@ -94,7 +104,8 @@
     font-style: normal;
     font-weight: 900;
     font-display: swap;
-    src: url("/fonts/Moderat-Black.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Black.woff2") format("woff2"),
       url("/fonts/Moderat-Black.woff") format("woff");
   }
 
@@ -103,8 +114,29 @@
     font-style: italic;
     font-weight: 900;
     font-display: swap;
-    src: url("/fonts/Moderat-Black-Italic.woff2") format("woff2"),
+    src:
+      url("/fonts/Moderat-Black-Italic.woff2") format("woff2"),
       url("/fonts/Moderat-Black-Italic.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Regular.woff2") format("woff2"),
+      url("/fonts/NotoSans-Regular.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: italic;
+    font-weight: 400;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Regular-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Regular-Italic.woff") format("woff");
   }
 </style>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
