add missing @font-face

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -122,6 +122,46 @@
   @font-face {
     font-family: "Noto Sans";
     font-style: normal;
+    font-weight: 100;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Thin.woff2") format("woff2"),
+      url("/fonts/NotoSans-Thin.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: italic;
+    font-weight: 100;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Thin-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Thin-Italic.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Light.woff2") format("woff2"),
+      url("/fonts/NotoSans-Light.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: italic;
+    font-weight: 300;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Light-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Light-Italic.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: normal;
     font-weight: 400;
     font-display: swap;
     src:
@@ -137,6 +177,66 @@
     src:
       url("/fonts/NotoSans-Regular-Italic.woff2") format("woff2"),
       url("/fonts/NotoSans-Regular-Italic.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Medium.woff2") format("woff2"),
+      url("/fonts/NotoSans-Medium.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: italic;
+    font-weight: 500;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Medium-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Medium-Italic.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Bold.woff2") format("woff2"),
+      url("/fonts/NotoSans-Bold.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Bold-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Bold-Italic.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Black.woff2") format("woff2"),
+      url("/fonts/NotoSans-Black.woff") format("woff");
+  }
+
+  @font-face {
+    font-family: "Noto Sans";
+    font-style: italic;
+    font-weight: 700;
+    font-display: swap;
+    src:
+      url("/fonts/NotoSans-Black-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Black-Italic.woff") format("woff");
   }
 </style>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
