--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,122 +1,122 @@
 <style>
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: normal;
     font-weight: 100;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Thin.woff2") format("woff2"),
-      url("/fonts/Moderat-Thin.woff") format("woff");
+      url("/fonts/NotoSans-Thin.woff2") format("woff2"),
+      url("/fonts/NotoSans-Thin.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: italic;
     font-weight: 100;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Thin-Italic.woff2") format("woff2"),
-      url("/fonts/Moderat-Thin-Italic.woff") format("woff");
+      url("/fonts/NotoSans-Thin-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Thin-Italic.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: normal;
     font-weight: 300;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Light.woff2") format("woff2"),
-      url("/fonts/Moderat-Light.woff") format("woff");
+      url("/fonts/NotoSans-Light.woff2") format("woff2"),
+      url("/fonts/NotoSans-Light.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: italic;
     font-weight: 300;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Light-Italic.woff2") format("woff2"),
-      url("/fonts/Moderat-Light-Italic.woff") format("woff");
+      url("/fonts/NotoSans-Light-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Light-Italic.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: normal;
     font-weight: 400;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Regular.woff2") format("woff2"),
-      url("/fonts/Moderat-Regular.woff") format("woff");
+      url("/fonts/NotoSans-Regular.woff2") format("woff2"),
+      url("/fonts/NotoSans-Regular.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: italic;
     font-weight: 400;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Regular-Italic.woff2") format("woff2"),
-      url("/fonts/Moderat-Regular-Italic.woff") format("woff");
+      url("/fonts/NotoSans-Regular-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Regular-Italic.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: normal;
     font-weight: 500;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Medium.woff2") format("woff2"),
-      url("/fonts/Moderat-Medium.woff") format("woff");
+      url("/fonts/NotoSans-Medium.woff2") format("woff2"),
+      url("/fonts/NotoSans-Medium.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: italic;
     font-weight: 500;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Medium-Italic.woff2") format("woff2"),
-      url("/fonts/Moderat-Medium-Italic.woff") format("woff");
+      url("/fonts/NotoSans-Medium-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Medium-Italic.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: normal;
     font-weight: 700;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Bold.woff2") format("woff2"),
-      url("/fonts/Moderat-Bold.woff") format("woff");
+      url("/fonts/NotoSans-Bold.woff2") format("woff2"),
+      url("/fonts/NotoSans-Bold.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: italic;
     font-weight: 700;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Bold-Italic.woff2") format("woff2"),
-      url("/fonts/Moderat-Bold-Italic.woff") format("woff");
+      url("/fonts/NotoSans-Bold-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Bold-Italic.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: normal;
-    font-weight: 900;
+    font-weight: 700;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Black.woff2") format("woff2"),
-      url("/fonts/Moderat-Black.woff") format("woff");
+      url("/fonts/NotoSans-Black.woff2") format("woff2"),
+      url("/fonts/NotoSans-Black.woff") format("woff");
   }
 
   @font-face {
-    font-family: "Moderat";
+    font-family: "Noto Sans";
     font-style: italic;
-    font-weight: 900;
+    font-weight: 700;
     font-display: swap;
     src:
-      url("/fonts/Moderat-Black-Italic.woff2") format("woff2"),
-      url("/fonts/Moderat-Black-Italic.woff") format("woff");
+      url("/fonts/NotoSans-Black-Italic.woff2") format("woff2"),
+      url("/fonts/NotoSans-Black-Italic.woff") format("woff");
   }
 
   @font-face {
@@ -241,7 +241,4 @@
 </style>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
-  rel="stylesheet"
-/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
