fix: remove duplicated @font-face entries

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -102,7 +102,7 @@
   @font-face {
     font-family: "Noto Sans";
     font-style: normal;
-    font-weight: 700;
+    font-weight: 900;
     font-display: swap;
     src:
       url("/fonts/NotoSans-Black.woff2") format("woff2"),
@@ -112,127 +112,7 @@
   @font-face {
     font-family: "Noto Sans";
     font-style: italic;
-    font-weight: 700;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Black-Italic.woff2") format("woff2"),
-      url("/fonts/NotoSans-Black-Italic.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 100;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Thin.woff2") format("woff2"),
-      url("/fonts/NotoSans-Thin.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 100;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Thin-Italic.woff2") format("woff2"),
-      url("/fonts/NotoSans-Thin-Italic.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 300;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Light.woff2") format("woff2"),
-      url("/fonts/NotoSans-Light.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 300;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Light-Italic.woff2") format("woff2"),
-      url("/fonts/NotoSans-Light-Italic.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Regular.woff2") format("woff2"),
-      url("/fonts/NotoSans-Regular.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 400;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Regular-Italic.woff2") format("woff2"),
-      url("/fonts/NotoSans-Regular-Italic.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 500;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Medium.woff2") format("woff2"),
-      url("/fonts/NotoSans-Medium.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 500;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Medium-Italic.woff2") format("woff2"),
-      url("/fonts/NotoSans-Medium-Italic.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Bold.woff2") format("woff2"),
-      url("/fonts/NotoSans-Bold.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 700;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Bold-Italic.woff2") format("woff2"),
-      url("/fonts/NotoSans-Bold-Italic.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src:
-      url("/fonts/NotoSans-Black.woff2") format("woff2"),
-      url("/fonts/NotoSans-Black.woff") format("woff");
-  }
-
-  @font-face {
-    font-family: "Noto Sans";
-    font-style: italic;
-    font-weight: 700;
+    font-weight: 900;
     font-display: swap;
     src:
       url("/fonts/NotoSans-Black-Italic.woff2") format("woff2"),
@@ -241,4 +121,7 @@
 </style>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet" />
+<link
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
+  rel="stylesheet"
+/>
